[gd_scene load_steps=14 format=2]

[ext_resource path="res://Badger.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Boundary.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://art/grass-meadow.PNG" type="Texture" id=6]
[ext_resource path="res://art/cricket-wicket.png" type="Texture" id=7]

[sub_resource type="TileSet" id=6]
resource_local_to_scene = true
0/name = "grass-meadow.PNG 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 1120, 544 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 912, 103, 0, 0, 0, 0, 910, 480 )
}

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Main" type="Node"]
script = ExtResource( 3 )
ball_scene = ExtResource( 2 )

[node name="Grass" type="TileMap" parent="."]
scale = Vector2( 0.3, 0.3 )
tile_set = SubResource( 6 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 65553, 0, 0, 65570, 0, 0, 65571, 0, 0, 524288, 0, 0, 524305, 0, 0, 524322, 0, 0, 524323, 0, 0, 1048577, 0, 0, 1048594, 0, 0, 1048611, 0, 0, 1441793, 0, 0, 1441809, 0, 0, 1441826, 0, 0, 1441827, 0, 0 )

[node name="Wicket" type="TextureRect" parent="."]
margin_left = 30.0
margin_top = 380.0
margin_right = 463.0
margin_bottom = 1600.0
rect_rotation = -90.0
rect_scale = Vector2( 0.4, 0.5 )
texture = ExtResource( 7 )

[node name="Badger" parent="." instance=ExtResource( 1 )]
mass = 50.0

[node name="BallTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 200, 300 )

[node name="BallPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="BallSpawnLocation" type="PathFollow2D" parent="BallPath"]
position = Vector2( 912, 103 )
rotation = 1.5761

[node name="Boundary" parent="." instance=ExtResource( 4 )]

[node name="Score" type="Label" parent="."]
margin_left = 54.0
margin_top = 524.0
margin_right = 364.0
margin_bottom = 602.0
custom_fonts/font = SubResource( 2 )
text = "Badgers: 0 - 0"

[node name="Info" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -360.0
margin_top = 52.0
margin_right = 372.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 3 )
align = 1
autowrap = true

[node name="AllOut" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.5
margin_top = -30.5
margin_right = 312.5
margin_bottom = 30.5
custom_fonts/font = SubResource( 4 )
text = "Badgers all out for 100!"
align = 1

[node name="PlayAgain" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -155.0
margin_top = -242.0
margin_right = 140.0
margin_bottom = -175.0
custom_fonts/font = SubResource( 5 )
text = "Play Again"

[connection signal="timeout" from="BallTimer" to="." method="_on_BallTimer_timeout"]
[connection signal="runs_1_cowcorner" from="Boundary" to="." method="_on_Boundary_runs_1_cowcorner"]
[connection signal="runs_1_deepextracover" from="Boundary" to="." method="_on_Boundary_runs_1_deepextracover"]
[connection signal="runs_1_point" from="Boundary" to="." method="_on_Boundary_runs_1_point"]
[connection signal="runs_1_squareleg" from="Boundary" to="." method="_on_Boundary_runs_1_squareleg"]
[connection signal="runs_4_3rdman" from="Boundary" to="." method="_on_Boundary_runs_4_3rdman"]
[connection signal="runs_4_cover" from="Boundary" to="." method="_on_Boundary_runs_4_cover"]
[connection signal="runs_4_fineleg" from="Boundary" to="." method="_on_Boundary_runs_4_fineleg"]
[connection signal="runs_4_legdrive" from="Boundary" to="." method="_on_Boundary_runs_4_legdrive"]
[connection signal="runs_4_midoff" from="Boundary" to="." method="_on_Boundary_runs_4_midoff"]
[connection signal="runs_4_midon" from="Boundary" to="." method="_on_Boundary_runs_4_midon"]
[connection signal="runs_6_downground" from="Boundary" to="." method="_on_Boundary_runs_6_downground"]
[connection signal="runs_6_extracover" from="Boundary" to="." method="_on_Boundary_runs_6_extracover"]
[connection signal="runs_6_midwicket" from="Boundary" to="." method="_on_Boundary_runs_6_midwicket"]
[connection signal="wicket_cover" from="Boundary" to="." method="_on_Boundary_wicket_cover"]
[connection signal="wicket_deepmidwicket" from="Boundary" to="." method="_on_Boundary_wicket_deepmidwicket"]
[connection signal="wicket_extracover" from="Boundary" to="." method="_on_Boundary_wicket_extracover"]
[connection signal="wicket_longoff" from="Boundary" to="." method="_on_Boundary_wicket_longoff"]
[connection signal="wicket_longon" from="Boundary" to="." method="_on_Boundary_wicket_longon"]
[connection signal="wicket_midwicket" from="Boundary" to="." method="_on_Boundary_wicket_midwicket"]
[connection signal="wicket_stumps" from="Boundary" to="." method="_on_Boundary_wicket_stumps"]
[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
